// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/metadata-instance-editor/fields/EnumMetadataField should correctly render an enum field 1`] = `
<div
  className="bdl-EnumMetadataField"
>
  <Label>
    <SingleSelectField
      isEscapedWithReference={true}
      isScrollable={true}
      onChange={[Function]}
      options={
        [
          {
            "displayText": undefined,
            "isSelectable": false,
            "value": undefined,
          },
          {
            "displayText": "foo",
            "isSelectable": true,
            "value": "foo",
          },
          {
            "displayText": "bar",
            "isSelectable": true,
            "value": "bar",
          },
          {
            "displayText": "baz",
            "isSelectable": true,
            "value": "baz",
          },
        ]
      }
      selectedValue="value"
    />
  </Label>
</div>
`;

exports[`features/metadata-instance-editor/fields/EnumMetadataField should correctly render an enum field with description 1`] = `
<div
  className="bdl-EnumMetadataField"
>
  <Label>
    <i
      className="bdl-EnumMetadataField-desc"
    >
      description
    </i>
    <SingleSelectField
      isEscapedWithReference={true}
      isScrollable={true}
      onChange={[Function]}
      options={
        [
          {
            "displayText": undefined,
            "isSelectable": false,
            "value": undefined,
          },
          {
            "displayText": "foo",
            "isSelectable": true,
            "value": "foo",
          },
          {
            "displayText": "bar",
            "isSelectable": true,
            "value": "bar",
          },
          {
            "displayText": "baz",
            "isSelectable": true,
            "value": "baz",
          },
        ]
      }
      selectedValue="value"
    />
  </Label>
</div>
`;
